PLC-23-24-main/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> axioma
Rule 1     axioma -> programa
Rule 2     programa -> declaracoes corpo
Rule 3     declaracoes -> declaracoes declaracao
Rule 4     declaracoes -> <empty>
Rule 5     declaracao -> tipo seqDecl PV
Rule 6     seqDecl -> atr VIRG seqDecl
Rule 7     seqDecl -> atr
Rule 8     atr -> VAR
Rule 9     atr -> VAR OPAT operacao
Rule 10    atr -> VAR PRE NUMINT PRD
Rule 11    atr -> VAR PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
Rule 12    atr -> VAR PRE NUMINT PRD PRE NUMINT PRD
Rule 13    atr -> VAR PRE NUMINT PRD PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
Rule 14    seqNumInt -> NUMINT
Rule 15    seqNumInt -> NUMINT VIRG seqNumInt
Rule 16    corpo -> corpo instrucao
Rule 17    corpo -> <empty>
Rule 18    instrucao -> ifelsestatement
Rule 19    instrucao -> print PV
Rule 20    instrucao -> VAR OPAT operacao PV
Rule 21    instrucao -> VAR PCE NUMINT PCD OPAT operacao PV
Rule 22    instrucao -> VAR PCE NUMINT PCD PCE NUMINT PCD OPAT operacao PV
Rule 23    instrucao -> tojump PV
Rule 24    instrucao -> jumpto PV
Rule 25    operacao -> termo
Rule 26    operacao -> operacao OPAD termo
Rule 27    operacao -> operacao OPSUB termo
Rule 28    termo -> fator
Rule 29    termo -> termo OPMUL fator
Rule 30    termo -> termo OPDIV fator
Rule 31    fator -> NUMINT
Rule 32    fator -> VAR
Rule 33    fator -> VAR PCE NUMINT PCD
Rule 34    fator -> VAR PCE NUMINT PCD PCE NUMINT PCD
Rule 35    fator -> bool
Rule 36    fator -> PAL
Rule 37    fator -> NOT PCE condicao PCD
Rule 38    fator -> LER PCE PCD
Rule 39    ifelsestatement -> IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH
Rule 40    condicao -> operacao
Rule 41    condicao -> operacao IGUAL operacao
Rule 42    condicao -> operacao DIFF operacao
Rule 43    condicao -> operacao LESS operacao
Rule 44    condicao -> operacao GREATER operacao
Rule 45    condicao -> operacao LEQ operacao
Rule 46    condicao -> operacao GEQ operacao
Rule 47    condicao -> PCE condicao PCD OR PCE condicao PCD
Rule 48    condicao -> PCE condicao PCD AND PCE condicao PCD
Rule 49    tojump -> MARK ABRIR_CH corpo FECHAR_CH IF PCE condicao PCD JUMP
Rule 50    jumpto -> MARK IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH JUMP
Rule 51    print -> PRINT PCE condicao PCD
Rule 52    bool -> TRUE
Rule 53    bool -> FALSE
Rule 54    tipo -> INT
Rule 55    tipo -> STRING
Rule 56    tipo -> BOOL
Rule 57    tipo -> ARRAY

Terminals, with rules where they appear

ABRIR_CH             : 11 13 39 39 49 50
AND                  : 48
ARRAY                : 57
BOOL                 : 56
COMMENT              : 
DIFF                 : 42
ELSE                 : 39
FALSE                : 53
FECHAR_CH            : 11 13 39 39 49 50
GEQ                  : 46
GREATER              : 44
IF                   : 39 49 50
IGUAL                : 41
INT                  : 54
JUMP                 : 49 50
LEQ                  : 45
LER                  : 38
LESS                 : 43
MARK                 : 49 50
NOT                  : 37
NUMINT               : 10 11 12 12 13 13 14 15 21 22 22 31 33 34 34
OPAD                 : 26
OPAT                 : 9 11 13 20 21 22
OPDIV                : 30
OPMUL                : 29
OPSUB                : 27
OR                   : 47
PAL                  : 36
PCD                  : 21 22 22 33 34 34 37 38 39 47 47 48 48 49 50 51
PCE                  : 21 22 22 33 34 34 37 38 39 47 47 48 48 49 50 51
PRD                  : 10 11 12 12 13 13
PRE                  : 10 11 12 12 13 13
PRINT                : 51
PV                   : 5 19 20 21 22 23 24
STRING               : 55
TRUE                 : 52
VAR                  : 8 9 10 11 12 13 20 21 22 32 33 34
VIRG                 : 6 15
error                : 

Nonterminals, with rules where they appear

atr                  : 6 7
axioma               : 0
bool                 : 35
condicao             : 37 39 47 47 48 48 49 50 51
corpo                : 2 16 39 39 49 50
declaracao           : 3
declaracoes          : 2 3
fator                : 28 29 30
ifelsestatement      : 18
instrucao            : 16
jumpto               : 24
operacao             : 9 20 21 22 26 27 40 41 41 42 42 43 43 44 44 45 45 46 46
print                : 19
programa             : 1
seqDecl              : 5 6
seqNumInt            : 11 13 15
termo                : 25 26 27 29 30
tipo                 : 5
tojump               : 23

Parsing method: LALR

state 0

    (0) S' -> . axioma
    (1) axioma -> . programa
    (2) programa -> . declaracoes corpo
    (3) declaracoes -> . declaracoes declaracao
    (4) declaracoes -> .

    INT             reduce using rule 4 (declaracoes -> .)
    STRING          reduce using rule 4 (declaracoes -> .)
    BOOL            reduce using rule 4 (declaracoes -> .)
    ARRAY           reduce using rule 4 (declaracoes -> .)
    VAR             reduce using rule 4 (declaracoes -> .)
    IF              reduce using rule 4 (declaracoes -> .)
    PRINT           reduce using rule 4 (declaracoes -> .)
    MARK            reduce using rule 4 (declaracoes -> .)
    $end            reduce using rule 4 (declaracoes -> .)

    axioma                         shift and go to state 1
    programa                       shift and go to state 2
    declaracoes                    shift and go to state 3

state 1

    (0) S' -> axioma .



state 2

    (1) axioma -> programa .

    $end            reduce using rule 1 (axioma -> programa .)


state 3

    (2) programa -> declaracoes . corpo
    (3) declaracoes -> declaracoes . declaracao
    (16) corpo -> . corpo instrucao
    (17) corpo -> .
    (5) declaracao -> . tipo seqDecl PV
    (54) tipo -> . INT
    (55) tipo -> . STRING
    (56) tipo -> . BOOL
    (57) tipo -> . ARRAY

    VAR             reduce using rule 17 (corpo -> .)
    IF              reduce using rule 17 (corpo -> .)
    PRINT           reduce using rule 17 (corpo -> .)
    MARK            reduce using rule 17 (corpo -> .)
    $end            reduce using rule 17 (corpo -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    ARRAY           shift and go to state 10

    corpo                          shift and go to state 4
    declaracao                     shift and go to state 5
    tipo                           shift and go to state 6

state 4

    (2) programa -> declaracoes corpo .
    (16) corpo -> corpo . instrucao
    (18) instrucao -> . ifelsestatement
    (19) instrucao -> . print PV
    (20) instrucao -> . VAR OPAT operacao PV
    (21) instrucao -> . VAR PCE NUMINT PCD OPAT operacao PV
    (22) instrucao -> . VAR PCE NUMINT PCD PCE NUMINT PCD OPAT operacao PV
    (23) instrucao -> . tojump PV
    (24) instrucao -> . jumpto PV
    (39) ifelsestatement -> . IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH
    (51) print -> . PRINT PCE condicao PCD
    (49) tojump -> . MARK ABRIR_CH corpo FECHAR_CH IF PCE condicao PCD JUMP
    (50) jumpto -> . MARK IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH JUMP

    $end            reduce using rule 2 (programa -> declaracoes corpo .)
    VAR             shift and go to state 14
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    MARK            shift and go to state 19

    instrucao                      shift and go to state 11
    ifelsestatement                shift and go to state 12
    print                          shift and go to state 13
    tojump                         shift and go to state 15
    jumpto                         shift and go to state 16

state 5

    (3) declaracoes -> declaracoes declaracao .

    INT             reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    STRING          reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    BOOL            reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    ARRAY           reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    VAR             reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    IF              reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    PRINT           reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    MARK            reduce using rule 3 (declaracoes -> declaracoes declaracao .)
    $end            reduce using rule 3 (declaracoes -> declaracoes declaracao .)


state 6

    (5) declaracao -> tipo . seqDecl PV
    (6) seqDecl -> . atr VIRG seqDecl
    (7) seqDecl -> . atr
    (8) atr -> . VAR
    (9) atr -> . VAR OPAT operacao
    (10) atr -> . VAR PRE NUMINT PRD
    (11) atr -> . VAR PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
    (12) atr -> . VAR PRE NUMINT PRD PRE NUMINT PRD
    (13) atr -> . VAR PRE NUMINT PRD PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH

    VAR             shift and go to state 22

    seqDecl                        shift and go to state 20
    atr                            shift and go to state 21

state 7

    (54) tipo -> INT .

    VAR             reduce using rule 54 (tipo -> INT .)


state 8

    (55) tipo -> STRING .

    VAR             reduce using rule 55 (tipo -> STRING .)


state 9

    (56) tipo -> BOOL .

    VAR             reduce using rule 56 (tipo -> BOOL .)


state 10

    (57) tipo -> ARRAY .

    VAR             reduce using rule 57 (tipo -> ARRAY .)


state 11

    (16) corpo -> corpo instrucao .

    VAR             reduce using rule 16 (corpo -> corpo instrucao .)
    IF              reduce using rule 16 (corpo -> corpo instrucao .)
    PRINT           reduce using rule 16 (corpo -> corpo instrucao .)
    MARK            reduce using rule 16 (corpo -> corpo instrucao .)
    $end            reduce using rule 16 (corpo -> corpo instrucao .)
    FECHAR_CH       reduce using rule 16 (corpo -> corpo instrucao .)


state 12

    (18) instrucao -> ifelsestatement .

    VAR             reduce using rule 18 (instrucao -> ifelsestatement .)
    IF              reduce using rule 18 (instrucao -> ifelsestatement .)
    PRINT           reduce using rule 18 (instrucao -> ifelsestatement .)
    MARK            reduce using rule 18 (instrucao -> ifelsestatement .)
    $end            reduce using rule 18 (instrucao -> ifelsestatement .)
    FECHAR_CH       reduce using rule 18 (instrucao -> ifelsestatement .)


state 13

    (19) instrucao -> print . PV

    PV              shift and go to state 23


state 14

    (20) instrucao -> VAR . OPAT operacao PV
    (21) instrucao -> VAR . PCE NUMINT PCD OPAT operacao PV
    (22) instrucao -> VAR . PCE NUMINT PCD PCE NUMINT PCD OPAT operacao PV

    OPAT            shift and go to state 24
    PCE             shift and go to state 25


state 15

    (23) instrucao -> tojump . PV

    PV              shift and go to state 26


state 16

    (24) instrucao -> jumpto . PV

    PV              shift and go to state 27


state 17

    (39) ifelsestatement -> IF . PCE condicao PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH

    PCE             shift and go to state 28


state 18

    (51) print -> PRINT . PCE condicao PCD

    PCE             shift and go to state 29


state 19

    (49) tojump -> MARK . ABRIR_CH corpo FECHAR_CH IF PCE condicao PCD JUMP
    (50) jumpto -> MARK . IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH JUMP

    ABRIR_CH        shift and go to state 30
    IF              shift and go to state 31


state 20

    (5) declaracao -> tipo seqDecl . PV

    PV              shift and go to state 32


state 21

    (6) seqDecl -> atr . VIRG seqDecl
    (7) seqDecl -> atr .

    VIRG            shift and go to state 33
    PV              reduce using rule 7 (seqDecl -> atr .)


state 22

    (8) atr -> VAR .
    (9) atr -> VAR . OPAT operacao
    (10) atr -> VAR . PRE NUMINT PRD
    (11) atr -> VAR . PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
    (12) atr -> VAR . PRE NUMINT PRD PRE NUMINT PRD
    (13) atr -> VAR . PRE NUMINT PRD PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH

    VIRG            reduce using rule 8 (atr -> VAR .)
    PV              reduce using rule 8 (atr -> VAR .)
    OPAT            shift and go to state 34
    PRE             shift and go to state 35


state 23

    (19) instrucao -> print PV .

    VAR             reduce using rule 19 (instrucao -> print PV .)
    IF              reduce using rule 19 (instrucao -> print PV .)
    PRINT           reduce using rule 19 (instrucao -> print PV .)
    MARK            reduce using rule 19 (instrucao -> print PV .)
    $end            reduce using rule 19 (instrucao -> print PV .)
    FECHAR_CH       reduce using rule 19 (instrucao -> print PV .)


state 24

    (20) instrucao -> VAR OPAT . operacao PV
    (25) operacao -> . termo
    (26) operacao -> . operacao OPAD termo
    (27) operacao -> . operacao OPSUB termo
    (28) termo -> . fator
    (29) termo -> . termo OPMUL fator
    (30) termo -> . termo OPDIV fator
    (31) fator -> . NUMINT
    (32) fator -> . VAR
    (33) fator -> . VAR PCE NUMINT PCD
    (34) fator -> . VAR PCE NUMINT PCD PCE NUMINT PCD
    (35) fator -> . bool
    (36) fator -> . PAL
    (37) fator -> . NOT PCE condicao PCD
    (38) fator -> . LER PCE PCD
    (52) bool -> . TRUE
    (53) bool -> . FALSE

    NUMINT          shift and go to state 40
    VAR             shift and go to state 36
    PAL             shift and go to state 42
    NOT             shift and go to state 43
    LER             shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    operacao                       shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 39
    bool                           shift and go to state 41

state 25

    (21) instrucao -> VAR PCE . NUMINT PCD OPAT operacao PV
    (22) instrucao -> VAR PCE . NUMINT PCD PCE NUMINT PCD OPAT operacao PV

    NUMINT          shift and go to state 47


state 26

    (23) instrucao -> tojump PV .

    VAR             reduce using rule 23 (instrucao -> tojump PV .)
    IF              reduce using rule 23 (instrucao -> tojump PV .)
    PRINT           reduce using rule 23 (instrucao -> tojump PV .)
    MARK            reduce using rule 23 (instrucao -> tojump PV .)
    $end            reduce using rule 23 (instrucao -> tojump PV .)
    FECHAR_CH       reduce using rule 23 (instrucao -> tojump PV .)


state 27

    (24) instrucao -> jumpto PV .

    VAR             reduce using rule 24 (instrucao -> jumpto PV .)
    IF              reduce using rule 24 (instrucao -> jumpto PV .)
    PRINT           reduce using rule 24 (instrucao -> jumpto PV .)
    MARK            reduce using rule 24 (instrucao -> jumpto PV .)
    $end            reduce using rule 24 (instrucao -> jumpto PV .)
    FECHAR_CH       reduce using rule 24 (instrucao -> jumpto PV .)


state 28

    (39) ifelsestatement -> IF PCE . condicao PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH
    (40) condicao -> . operacao
    (41) condicao -> . operacao IGUAL operacao
    (42) condicao -> . operacao DIFF operacao
    (43) condicao -> . operacao LESS operacao
    (44) condicao -> . operacao GREATER operacao
    (45) condicao -> . operacao LEQ operacao
    (46) condicao -> . operacao GEQ operacao
    (47) condicao -> . PCE condicao PCD OR PCE condicao PCD
    (48) condicao -> . PCE condicao PCD AND PCE condicao PCD
    (25) operacao -> . termo
    (26) operacao -> . operacao OPAD termo
    (27) operacao -> . operacao OPSUB termo
    (28) termo -> . fator
    (29) termo -> . termo OPMUL fator
    (30) termo -> . termo OPDIV fator
    (31) fator -> . NUMINT
    (32) fator -> . VAR
    (33) fator -> . VAR PCE NUMINT PCD
    (34) fator -> . VAR PCE NUMINT PCD PCE NUMINT PCD
    (35) fator -> . bool
    (36) fator -> . PAL
    (37) fator -> . NOT PCE condicao PCD
    (38) fator -> . LER PCE PCD
    (52) bool -> . TRUE
    (53) bool -> . FALSE

    PCE             shift and go to state 48
    NUMINT          shift and go to state 40
    VAR             shift and go to state 36
    PAL             shift and go to state 42
    NOT             shift and go to state 43
    LER             shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    condicao                       shift and go to state 49
    operacao                       shift and go to state 50
    termo                          shift and go to state 38
    fator                          shift and go to state 39
    bool                           shift and go to state 41

state 29

    (51) print -> PRINT PCE . condicao PCD
    (40) condicao -> . operacao
    (41) condicao -> . operacao IGUAL operacao
    (42) condicao -> . operacao DIFF operacao
    (43) condicao -> . operacao LESS operacao
    (44) condicao -> . operacao GREATER operacao
    (45) condicao -> . operacao LEQ operacao
    (46) condicao -> . operacao GEQ operacao
    (47) condicao -> . PCE condicao PCD OR PCE condicao PCD
    (48) condicao -> . PCE condicao PCD AND PCE condicao PCD
    (25) operacao -> . termo
    (26) operacao -> . operacao OPAD termo
    (27) operacao -> . operacao OPSUB termo
    (28) termo -> . fator
    (29) termo -> . termo OPMUL fator
    (30) termo -> . termo OPDIV fator
    (31) fator -> . NUMINT
    (32) fator -> . VAR
    (33) fator -> . VAR PCE NUMINT PCD
    (34) fator -> . VAR PCE NUMINT PCD PCE NUMINT PCD
    (35) fator -> . bool
    (36) fator -> . PAL
    (37) fator -> . NOT PCE condicao PCD
    (38) fator -> . LER PCE PCD
    (52) bool -> . TRUE
    (53) bool -> . FALSE

    PCE             shift and go to state 48
    NUMINT          shift and go to state 40
    VAR             shift and go to state 36
    PAL             shift and go to state 42
    NOT             shift and go to state 43
    LER             shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    condicao                       shift and go to state 51
    operacao                       shift and go to state 50
    termo                          shift and go to state 38
    fator                          shift and go to state 39
    bool                           shift and go to state 41

state 30

    (49) tojump -> MARK ABRIR_CH . corpo FECHAR_CH IF PCE condicao PCD JUMP
    (16) corpo -> . corpo instrucao
    (17) corpo -> .

    FECHAR_CH       reduce using rule 17 (corpo -> .)
    VAR             reduce using rule 17 (corpo -> .)
    IF              reduce using rule 17 (corpo -> .)
    PRINT           reduce using rule 17 (corpo -> .)
    MARK            reduce using rule 17 (corpo -> .)

    corpo                          shift and go to state 52

state 31

    (50) jumpto -> MARK IF . PCE condicao PCD ABRIR_CH corpo FECHAR_CH JUMP

    PCE             shift and go to state 53


state 32

    (5) declaracao -> tipo seqDecl PV .

    INT             reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    STRING          reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    BOOL            reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    ARRAY           reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    VAR             reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    IF              reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    PRINT           reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    MARK            reduce using rule 5 (declaracao -> tipo seqDecl PV .)
    $end            reduce using rule 5 (declaracao -> tipo seqDecl PV .)


state 33

    (6) seqDecl -> atr VIRG . seqDecl
    (6) seqDecl -> . atr VIRG seqDecl
    (7) seqDecl -> . atr
    (8) atr -> . VAR
    (9) atr -> . VAR OPAT operacao
    (10) atr -> . VAR PRE NUMINT PRD
    (11) atr -> . VAR PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
    (12) atr -> . VAR PRE NUMINT PRD PRE NUMINT PRD
    (13) atr -> . VAR PRE NUMINT PRD PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH

    VAR             shift and go to state 22

    atr                            shift and go to state 21
    seqDecl                        shift and go to state 54

state 34

    (9) atr -> VAR OPAT . operacao
    (25) operacao -> . termo
    (26) operacao -> . operacao OPAD termo
    (27) operacao -> . operacao OPSUB termo
    (28) termo -> . fator
    (29) termo -> . termo OPMUL fator
    (30) termo -> . termo OPDIV fator
    (31) fator -> . NUMINT
    (32) fator -> . VAR
    (33) fator -> . VAR PCE NUMINT PCD
    (34) fator -> . VAR PCE NUMINT PCD PCE NUMINT PCD
    (35) fator -> . bool
    (36) fator -> . PAL
    (37) fator -> . NOT PCE condicao PCD
    (38) fator -> . LER PCE PCD
    (52) bool -> . TRUE
    (53) bool -> . FALSE

    NUMINT          shift and go to state 40
    VAR             shift and go to state 36
    PAL             shift and go to state 42
    NOT             shift and go to state 43
    LER             shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    operacao                       shift and go to state 55
    termo                          shift and go to state 38
    fator                          shift and go to state 39
    bool                           shift and go to state 41

state 35

    (10) atr -> VAR PRE . NUMINT PRD
    (11) atr -> VAR PRE . NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH
    (12) atr -> VAR PRE . NUMINT PRD PRE NUMINT PRD
    (13) atr -> VAR PRE . NUMINT PRD PRE NUMINT PRD OPAT ABRIR_CH seqNumInt FECHAR_CH

    NUMINT          shift and go to state 56


state 36

    (32) fator -> VAR .
    (33) fator -> VAR . PCE NUMINT PCD
    (34) fator -> VAR . PCE NUMINT PCD PCE NUMINT PCD

    OPMUL           reduce using rule 32 (fator -> VAR .)
    OPDIV           reduce using rule 32 (fator -> VAR .)
    PV              reduce using rule 32 (fator -> VAR .)
    OPAD            reduce using rule 32 (fator -> VAR .)
    OPSUB           reduce using rule 32 (fator -> VAR .)
    IGUAL           reduce using rule 32 (fator -> VAR .)
    DIFF            reduce using rule 32 (fator -> VAR .)
    LESS            reduce using rule 32 (fator -> VAR .)
    GREATER         reduce using rule 32 (fator -> VAR .)
    LEQ             reduce using rule 32 (fator -> VAR .)
    GEQ             reduce using rule 32 (fator -> VAR .)
    PCD             reduce using rule 32 (fator -> VAR .)
    VIRG            reduce using rule 32 (fator -> VAR .)
    PCE             shift and go to state 57


state 37

    (20) instrucao -> VAR OPAT operacao . PV
    (26) operacao -> operacao . OPAD termo
    (27) operacao -> operacao . OPSUB termo

    PV              shift and go to state 58
    OPAD            shift and go to state 59
    OPSUB           shift and go to state 60


state 38

    (25) operacao -> termo .
    (29) termo -> termo . OPMUL fator
    (30) termo -> termo . OPDIV fator

    PV              reduce using rule 25 (operacao -> termo .)
    OPAD            reduce using rule 25 (operacao -> termo .)
    OPSUB           reduce using rule 25 (operacao -> termo .)
    IGUAL           reduce using rule 25 (operacao -> termo .)
    DIFF            reduce using rule 25 (operacao -> termo .)
    LESS            reduce using rule 25 (operacao -> termo .)
    GREATER         reduce using rule 25 (operacao -> termo .)
    LEQ             reduce using rule 25 (operacao -> termo .)
    GEQ             reduce using rule 25 (operacao -> termo .)
    PCD             reduce using rule 25 (operacao -> termo .)
    VIRG            reduce using rule 25 (operacao -> termo .)
    OPMUL           shift and go to state 61
    OPDIV           shift and go to state 62


state 39

    (28) termo -> fator .

    OPMUL           reduce using rule 28 (termo -> fator .)
    OPDIV           reduce using rule 28 (termo -> fator .)
    PV              reduce using rule 28 (termo -> fator .)
    OPAD            reduce using rule 28 (termo -> fator .)
    OPSUB           reduce using rule 28 (termo -> fator .)
    IGUAL           reduce using rule 28 (termo -> fator .)
    DIFF            reduce using rule 28 (termo -> fator .)
    LESS            reduce using rule 28 (termo -> fator .)
    GREATER         reduce using rule 28 (termo -> fator .)
    LEQ             reduce using rule 28 (termo -> fator .)
    GEQ             reduce using rule 28 (termo -> fator .)
    PCD             reduce using rule 28 (termo -> fator .)
    VIRG            reduce using rule 28 (termo -> fator .)


state 40

    (31) fator -> NUMINT .

    OPMUL           reduce using rule 31 (fator -> NUMINT .)
    OPDIV           reduce using rule 31 (fator -> NUMINT .)
    PV              reduce using rule 31 (fator -> NUMINT .)
    OPAD            reduce using rule 31 (fator -> NUMINT .)
    OPSUB           reduce using rule 31 (fator -> NUMINT .)
    IGUAL           reduce using rule 31 (fator -> NUMINT .)
    DIFF            reduce using rule 31 (fator -> NUMINT .)
    LESS            reduce using rule 31 (fator -> NUMINT .)
    GREATER         reduce using rule 31 (fator -> NUMINT .)
    LEQ             reduce using rule 31 (fator -> NUMINT .)
    GEQ             reduce using rule 31 (fator -> NUMINT .)
    PCD             reduce using rule 31 (fator -> NUMINT .)
    VIRG            reduce using rule 31 (fator -> NUMINT .)


state 41

    (35) fator -> bool .

    OPMUL           reduce using rule 35 (fator -> bool .)
    OPDIV           reduce using rule 35 (fator -> bool .)
    PV              reduce using rule 35 (fator -> bool .)
    OPAD            reduce using rule 35 (fator -> bool .)
    OPSUB           reduce using rule 35 (fator -> bool .)
    IGUAL           reduce using rule 35 (fator -> bool .)
    DIFF            reduce using rule 35 (fator -> bool .)
    LESS            reduce using rule 35 (fator -> bool .)
    GREATER         reduce using rule 35 (fator -> bool .)
    LEQ             reduce using rule 35 (fator -> bool .)
    GEQ             reduce using rule 35 (fator -> bool .)
    PCD             reduce using rule 35 (fator -> bool .)
    VIRG            reduce using rule 35 (fator -> bool .)


state 42

    (36) fator -> PAL .

    OPMUL           reduce using rule 36 (fator -> PAL .)
    OPDIV           reduce using rule 36 (fator -> PAL .)
    PV              reduce using rule 36 (fator -> PAL .)
    OPAD            reduce using rule 36 (fator -> PAL .)
    OPSUB           reduce using rule 36 (fator -> PAL .)
    IGUAL           reduce using rule 36 (fator -> PAL .)
    DIFF            reduce using rule 36 (fator -> PAL .)
    LESS            reduce using rule 36 (fator -> PAL .)
    GREATER         reduce using rule 36 (fator -> PAL .)
    LEQ             reduce using rule 36 (fator -> PAL .)
    GEQ             reduce using rule 36 (fator -> PAL .)
    PCD             reduce using rule 36 (fator -> PAL .)
    VIRG            reduce using rule 36 (fator -> PAL .)


state 43

    (37) fator -> NOT . PCE condicao PCD

    PCE             shift and go to state 63


state 44

    (38) fator -> LER . PCE PCD

    PCE             shift and go to state 64


state 45

    (52) bool -> TRUE .

    OPMUL           reduce using rule 52 (bool -> TRUE .)
    OPDIV           reduce using rule 52 (bool -> TRUE .)
    PV              reduce using rule 52 (bool -> TRUE .)
    OPAD            reduce using rule 52 (bool -> TRUE .)
    OPSUB           reduce using rule 52 (bool -> TRUE .)
    IGUAL           reduce using rule 52 (bool -> TRUE .)
    DIFF            reduce using rule 52 (bool -> TRUE .)
    LESS            reduce using rule 52 (bool -> TRUE .)
    GREATER         reduce using rule 52 (bool -> TRUE .)
    LEQ             reduce using rule 52 (bool -> TRUE .)
    GEQ             reduce using rule 52 (bool -> TRUE .)
    PCD             reduce using rule 52 (bool -> TRUE .)
    VIRG            reduce using rule 52 (bool -> TRUE .)


state 46

    (53) bool -> FALSE .

    OPMUL           reduce using rule 53 (bool -> FALSE .)
    OPDIV           reduce using rule 53 (bool -> FALSE .)
    PV              reduce using rule 53 (bool -> FALSE .)
    OPAD            reduce using rule 53 (bool -> FALSE .)
    OPSUB           reduce using rule 53 (bool -> FALSE .)
    IGUAL           reduce using rule 53 (bool -> FALSE .)
    DIFF            reduce using rule 53 (bool -> FALSE .)
    LESS            reduce using rule 53 (bool -> FALSE .)
    GREATER         reduce using rule 53 (bool -> FALSE .)
    LEQ             reduce using rule 53 (bool -> FALSE .)
    GEQ             reduce using rule 53 (bool -> FALSE .)
    PCD             reduce using rule 53 (bool -> FALSE .)
    VIRG            reduce using rule 53 (bool -> FALSE .)


state 47

    (21) instrucao -> VAR PCE NUMINT . PCD OPAT operacao PV
    (22) instrucao -> VAR PCE NUMINT . PCD PCE NUMINT PCD OPAT operacao PV

    PCD             shift and go to state 65


state 48

    (47) condicao -> PCE . condicao PCD OR PCE condicao PCD
    (48) condicao -> PCE . condicao PCD AND PCE condicao PCD
    (40) condicao -> . operacao
    (41) condicao -> . operacao IGUAL operacao
    (42) condicao -> . operacao DIFF operacao
    (43) condicao -> . operacao LESS operacao
    (44) condicao -> . operacao GREATER operacao
    (45) condicao -> . operacao LEQ operacao
    (46) condicao -> . operacao GEQ operacao
    (47) condicao -> . PCE condicao PCD OR PCE condicao PCD
    (48) condicao -> . PCE condicao PCD AND PCE condicao PCD
    (25) operacao -> . termo
    (26) operacao -> . operacao OPAD termo
    (27) operacao -> . operacao OPSUB termo
    (28) termo -> . fator
    (29) termo -> . termo OPMUL fator
    (30) termo -> . termo OPDIV fator
    (31) fator -> . NUMINT
    (32) fator -> . VAR
    (33) fator -> . VAR PCE NUMINT PCD
    (34) fator -> . VAR PCE NUMINT PCD PCE NUMINT PCD
    (35) fator -> . bool
    (36) fator -> . PAL
    (37) fator -> . NOT PCE condicao PCD
    (38) fator -> . LER PCE PCD
    (52) bool -> . TRUE
    (53) bool -> . FALSE

    PCE             shift and go to state 48
    NUMINT          shift and go to state 40
    VAR             shift and go to state 36
    PAL             shift and go to state 42
    NOT             shift and go to state 43
    LER             shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    condicao                       shift and go to state 66
    operacao                       shift and go to state 50
    termo                          shift and go to state 38
    fator                          shift and go to state 39
    bool                           shift and go to state 41

state 49

    (39) ifelsestatement -> IF PCE condicao . PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH

    PCD             shift and go to state 67


state 50

    (40) condicao -> operacao .
    (41) condicao -> operacao . IGUAL operacao
    (42) condicao -> operacao . DIFF operacao
    (43) condicao -> operacao . LESS operacao
    (44) condicao -> operacao . GREATER operacao
    (45) condicao -> operacao . LEQ operacao
    (46) condicao -> operacao . GEQ operacao
    (26) operacao -> operacao . OPAD termo
    (27) operacao -> operacao . OPSUB termo

    PCD             reduce using rule 40 (condicao -> operacao .)
    IGUAL           shift and go to state 68
    DIFF            shift and go to state 69
    LESS            shift and go to state 70
    GREATER         shift and go to state 71
    LEQ             shift and go to state 72
    GEQ             shift and go to state 73
    OPAD            shift and go to state 59
    OPSUB           shift and go to state 60


state 51

    (51) print -> PRINT PCE condicao . PCD

    PCD             shift and go to state 74


state 52

    (49) tojump -> MARK ABRIR_CH corpo . FECHAR_CH IF PCE condicao PCD JUMP
    (16) corpo -> corpo . instrucao
    (18) instrucao -> . ifelsestatement
    (19) instrucao -> . print PV
    (20) instrucao -> . VAR OPAT operacao PV
    (21) instrucao -> . VAR PCE NUMINT PCD OPAT operacao PV
    (22) instrucao -> . VAR PCE NUMINT PCD PCE NUMINT PCD OPAT operacao PV
    (23) instrucao -> . tojump PV
    (24) instrucao -> . jumpto PV
    (39) ifelsestatement -> . IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH ELSE ABRIR_CH corpo FECHAR_CH
    (51) print -> . PRINT PCE condicao PCD
    (49) tojump -> . MARK ABRIR_CH corpo FECHAR_CH IF PCE condicao PCD JUMP
    (50) jumpto -> . MARK IF PCE condicao PCD ABRIR_CH corpo FECHAR_CH JUMP

    FECHAR_CH       shift and go to state 75
    VAR             shift and go to state 14
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    MARK            shift and go to state 19

    instrucao                      shift and go to state 11
